# libxc

./: CMakeLists.txt  README.md
doc/: xctype.3  xctype.md  xlocale.3  xlocale.md  xmap.3  xmap.md  xstddef.3  xstddef.md  xstdio.3  xstdio.md  xstdlib.3  xstdlib.md  xstring.3  xstring.md  xwchar.3  xwchar.md  xwctype.3  xwctype.md
externs/: xsearch.h
include/: xctype.h  xlocale.h  xmap.h  xstddef.h  xstdio.h  xstdlib.h  xstring.h  xwchar.h  xwctype.h
src/: Text File.txt  libxc.cc  xctype.h  xlocale.h  xmap.h  xstddef.h  xstdio.h  xstdlib.h  xstring.h  xwchar.h  xwctype.h
test/: test_xctype.c  test_xlocale.c  test_xmap.cc  test_xstdio.c  test_xstdlib.c  test_xstring.c  test_xwchar.c  test_xwctype.c
